# YandexTrainingAlgorithms

./: .gitattributes  .gitignore  README.md  input.txt
Training1/: README.md
Training1/Lesson1/: README.md
Training1/Lesson2/: README.md
Training1/Lesson3/: CMakeLists.txt  README.md
Training1/Lesson4/: README.md
Training1/Lesson5/: README.md
Training1/Lesson7/: README.md
Training1/Lesson8/: README.md  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskG.cpp  taskH.cpp  taskI.cpp  taskJ.cpp
Training3/DivisionB/: README_11_15.md  README_16_20.md  README_1_10.md  README_21_25.md  README_26_30.md  README_31_35.md  README_36_40.md  Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task13_1.cpp  Task14.cpp  Task15.cpp  Task16.cpp  Task17.cpp  Task18.cpp  Task19.cpp  Task2.cpp  Task20.cpp  Task21.cpp  Task22.cpp  Task23.cpp  Task24.cpp  Task25.cpp  Task26.cpp  Task27.cpp  Task27_1.cpp  Task28.cpp  Task29.cpp  Task3.cpp  Task30.cpp  Task31.cpp  Task32.cpp  Task32_DSU.cpp  Task33.cpp  Task34.cpp  Task35.cpp  Task36.cpp  (+14 more)
Training7/: README.md
Training7/A. Three ones in a row/: main.cpp
Training7/B_Purchasing_tickets/: main.cpp
Training7/C_Nails/: Description.md
Training7/D_Output_the_maximum_cost_route/: Description.md
Training7/E_Cafe/: Description.md  main.cpp
Training7/F_MakeHeap/: Description.md
Training7/I_Size_of_Subtrees/: Description.md
Training7/Lesson1/H. Distribution of tasks/: CMakeLists.txt  Description.md  main.cpp
Training7/Lesson1/H. Distribution of tasks/tests/test_statement/: input.txt
Training7/Warm_Up/I_Size_of_Subtrees/: CMakeLists.txt  input.txt  main.cpp
Training8/Lesson1/: README.md
Training8/Lesson2/: README.md
Training8/Lesson3/: README.md
(+1157 files in other folders)
